--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Sign up</h2>
-<%= form_with model: @customer, url: customer_registration_path do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
   <div class="field">
     <%= f.label :姓 %><br />
