--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,12 +1,11 @@
-<h1>マイページ</h1>
-
-<%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></br>
-
-登録情報
-<%= link_to "編集する", customers_information_edit_path %>
-
+<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h1>
 
 <table>
+  <tr>
+    <td>会員ID</td>
+    <td><%= @customer.id %></td>
+  </tr>
+
   <tr>
     <td>氏名</td>
     <td><%= @customer.last_name %></td>
@@ -14,7 +13,7 @@
   </tr>
 
   <tr>
-    <td>カナ</td>
+    <td>フリガナ</td>
     <td><%= @customer.last_name_kana %></td>
     <td><%= @customer.first_name_kana %></td>
   </tr>
@@ -39,4 +38,11 @@
     <td><%= @customer.email %></td>
   </tr>
 
+  <tr>
+    <td>会員ステータス</td>
+    <td><%= @customer.is_active ? "有効" : "退会" %></td>
+  </tr>
+
 </table>
+
+<%= link_to "編集する", edit_admin_customer_path %>
