--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,53 +1,72 @@
-<h2>新規会員登録</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :姓 %><br />
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :名 %><br />
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :セイ %><br />
-    <%= f.text_field :last_name_kana %>
-  </div>
-  <div class="field">
-    <%= f.label :メイ %><br />
-    <%= f.text_field :first_name_kana %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  <div class="field">
-    <%= f.label :郵便番号 %><br />
-    <%= f.text_field :post_code %>
-  </div>
-  <div class="field">
-    <%= f.label :住所 %><br />
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
-    <%= f.label :電話番号 %><br />
-    <%= f.text_field :telephone_number %>
-  </div>
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-  <div class="field">
-    <%= f.label :パスワード確認用 %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  <div class="actions">
-    <%= f.submit "新規会員登録" %>
-  </div>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3 class="my-5">新規会員登録</h3>
 
-<p>既に登録済みの方</p>
-<%= link_to "こちら", new_customer_session_path %>　からログインしてください。
+        <div class="col-sm-14 col-md-12 col-lg-10 px-sm-0 mx-auto">
+        <table class="table table-borderless">
+
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "public/shared/error_messages", resource: resource %>
+
+            <tr>
+              <td>名前</td>
+              <td>（性）　 <%= f.text_field :last_name %></td>
+              <td>（名）　 <%= f.text_field :first_name %></td>
+            </tr>
+
+            <tr>
+              <td>フリガナ</td>
+              <td>（セイ）<%= f.text_field :last_name_kana %></td>
+              <td>（メイ）<%= f.text_field :first_name_kana %></td>
+            </tr>
+
+             <tr>
+               <td>メールアドレス</td>
+               <td>　　　　<%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+             </tr>
+
+             <tr>
+               <td>郵便番号(ハイフンなし)</td>
+               <td>　　　　<%= f.text_field :post_code %></td>
+             </tr>
+
+             <tr>
+               <td>住所</td>
+               <td>　　　　<%= f.text_field :address %></td>
+             </tr>
+
+             <tr>
+               <td>電話番号(ハイフンなし)</td>
+               <td>　　　　<%= f.text_field :telephone_number %></td>
+             </tr>
+
+             <tr>
+               <td>パスワード(<%= @minimum_password_length %>文字以上)</td>
+               <td>　　　　<%= f.password_field :password, autocomplete: "new-password" %></td>
+             </tr>
+
+             <tr>
+               <td>パスワード(確認用)</td>
+               <td>　　　　<%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+             </tr>
+
+             <tr>
+               <td></td>
+               <td>　　　　<%= f.submit "新規会員登録" , class: "btn btn-success"%></td>
+             </tr>
+
+          <% end %>
+        </table>
+      </div>
+
+      <div class="col m-5">
+        既に登録済みの方
+        <div class="mx-5">
+          <%= link_to "こちら", new_customer_session_path %>　からログインしてください。
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
