fixed admin item

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -16,11 +16,15 @@
     <tr>
       <td><%= item.id %></td>
       <td><%= link_to item.name, admin_item_path(item.id) %></td>
-      <td><%= item.price %></td>
-      <td><%= genre_id.name %></td>
-      <td><%= item.status %></td>
-    </tr>
-  <% end %>
+      <td><%= number_with_delimiter(item.price) %></td>
+      <td><%= item.genre.name %></td>
+      <% if item.is_active? %>
+        <td>販売中</td>
+      <% else %>
+        <td>販売停止中</td>
+      <% end %>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 <!-- 1ページ毎の表示数は10個のため、kaminariでページを分ける -->
