--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,6 +1,10 @@
 <h2>商品詳細</h2>
 
-<%= image_tag @item.get_item_image(100, 100) %>
+<% if @item.item_image.attached? %>
+  <%= image_tag @item.item_image, size: "200x200" %>
+<% else %>
+  <%= image_tag 'no_image', size: "200x200" %>
+<% end %>
 
 <table>
   <tr>
@@ -13,15 +17,19 @@
   </tr>
   <tr>
     <td>ジャンル</td>
-    <td><%= @item.genre_id.name %></td>
+    <td><%= @item.genre.name %></td>
   </tr>
   <tr>
     <td>税込価格<br />(税抜価格)</td>
-    <td><%= @order_detail.including_tax ) %>（<%= @item.price %>）円</td>
+    <td><%= number_with_delimiter((@item.price * 1.1).round) %>（<%= number_with_delimiter(@item.price) %>）円</td>
   </tr>
   <tr>
     <td>販売ステータス</td>
-    <td><%= @item.is_active %></td>
+    <% if @item.is_active? %>
+      <td>販売中</td>
+    <% else %>
+      <td>販売停止中</td>
+    <% end %>
   </tr>
 </table>
 
