--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="container">配送先登録/一覧</h1>
-<div class="row">
+<h2>配送先登録/一覧</h2>
+<div>
   <div>
   <%= form_with model: @address,url: addresses_path, method: :post do |f| %>
     <div>
@@ -13,7 +13,7 @@
     <div>
       <%= f.label :name, "宛名" %>
       <%= f.text_field :name, placeholder: '令和道子' %>
-      <%= f.submit '新規登録', class:"btn btn-sm btn-success" %>
+      <%= f.submit '新規登録', class:"btn btn-success" %>
     </div>
   <% end %>
   </div>
@@ -34,10 +34,10 @@
         <td><%= address.post_code %></td>
         <td><%= address.address %></td>
         <td><%= address.name %></td>
-        <% if @address.id == current_customer.id %>
+        <% if address.customer_id == current_customer.id %>
         <td>
-          <%= link_to '編集する', edit_address_path(address) %>
-          <%= link_to '削除する', address_path(address) %>
+          <%= link_to '編集する', edit_address_path(address), class:"btn btn-success" %>
+          <%= link_to '削除する', address_path(address), method: :delete, class: "btn btn-sm btn-danger" %>
         </td>
         <% end %>
       </tr>
