--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,51 +1,58 @@
 <header>
-  <% if request.fullpath.include?("/admin") %>
-    <!-- admin側のheaderを記述 -->
-      <ul class="navbar-nav ml-auto">
-        <li>
-        <%= link_to "商品一覧", "#", class:"btn" %>
-        </li>
-        <li>
-          <%= link_to "会員一覧", "#", class: "btn" %>
-        </li>
-        <li>
-          <%= link_to "注文履歴", "#", class: "btn" %>
-        </li>
-        <li>
-          <%= link_to "ジャンル一覧", "#", class: "btn" %>
-        </li>
-      </ul>
-  <% elsif customer_signed_in? %>
-    <!-- publicログイン状態のheaderを記述 -->
-    <ul class="navbar-nav ml-auto">
-      <li>
-        <%= link_to "マイページ", "#", class:"btn" %>
-      </li>
-      <li>
-        <%= link_to "商品一覧", "#", class:"btn" %>
-      </li>
-      <li>
-        <%= link_to "カート", "#", class:"btn" %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", "#", class:"btn" %>
-      </li>
-    </ul>
-  <% else %>
-    <!-- ログインしていない場合のheaderを記述 -->
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <%= link_to "About", about_path, class:"btn btn-outline-dark" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "商品一覧", "#", class:"btn" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "新規登録", "#", class:"btn" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "ログイン", "#", class:"btn" %>
-      </li>
-    </ul>
-  <% end %>
+  <div class="container">
+    <a class="navbar-brand" href="/"><span>ながのCAKE</span></a>
+    
+      <% if request.fullpath.include?("/admin") %>
+        <!-- admin側のheaderを記述 -->
+          <ul class="navbar-nav ml-auto">
+            <li>
+            <%= link_to "商品一覧", admin_items_path, class:"btn btn-outline-dark" %>
+            </li>
+            <li>
+              <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-dark" %>
+            </li>
+            <li>
+              <%= link_to "注文履歴", admin_root, class:"btn btn-outline-dark" %>
+            </li>
+            <li>
+              <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-dark" %>
+            </li>
+            <li>
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-outline-dark" %>
+            </li>
+          </ul>
+      <% elsif customer_signed_in? %>
+        <!-- publicログイン状態のheaderを記述 -->
+        <ul class="navbar-nav ml-auto">
+          <li>
+            <%= link_to "マイページ", my_page_path(current_user), class:"btn btn-outline-dark" %>
+          </li>
+          <li>
+            <%= link_to "商品一覧", items_path, class:"btn btn-outline-dark" %>
+          </li>
+          <li>
+            <%= link_to "カート", cart_items_path, class:"btn btn-outline-dark" %>
+          </li>
+          <li>
+            <%= link_to "ログアウト", destroy_customer_session_path, class:"btn btn-outline-dark" %>
+          </li>
+        </ul>
+      <% else %>
+        <!-- ログインしていない場合のheaderを記述 -->
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to "About", about_path, class:"btn btn-outline-dark" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "商品一覧", items_path, class:"btn btn-outline-dark" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "新規登録", new_customer_session_path, class:"btn btn-outline-dark" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログイン", customer_session_path, class:"btn btn-outline-dark" %>
+          </li>
+        </ul>
+      <% end %>
+    </div>
 </header>
