--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -37,7 +37,7 @@
         <% if address.customer_id == current_customer.id %>
         <td>
           <%= link_to '編集する', edit_address_path(address), class:"btn btn-success" %>
-          <%= link_to '削除する', address_path(address), method: :delete, class: "btn btn-sm btn-danger" %>
+          <%= link_to '削除する', address_path(address), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
         </td>
         <% end %>
       </tr>
