feature/cart_item

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -14,8 +14,12 @@
 
 ¥<%= number_with_delimiter((@item.price * 1.1).floor) %>(税込)
 
-<%= form_with model: @item, url: cart_items_path, method: :post do |f| %>
-  <!-- カート内商品の数量(amount)を持ってくる -->
-  <!-- f.select -->
-  <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+<% if @item.is_active? %>
+  <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
+
+    <%= f.hidden_field :item_id, :value => @item.id %>
+    <%= f.select :amount, *[1..10], include_blank: '個数選択' %>
+    <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+
+  <% end %>
 <% end %>
