add cart_item index

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,7 +1,7 @@
 <h2>商品詳細</h2>
 
-<% if @item.item_image.attached? %>
-  <%= image_tag @item.item_image, size: "200x200" %>
+<% if @item.image.attached? %>
+  <%= image_tag @item.image, size: "200x200" %>
 <% else %>
   <%= image_tag 'no_image', size: "200x200" %>
 <% end %>
