--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
   <div class="form-group">
     <%= f.label :商品画像 %>
-    <%= f.file_field :item_image, accept: "image/*" %>
+    <%= f.file_field :image, accept: "image/*" %>
   </div>
 
   <div class="form-group">
