--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
             <%= link_to "商品一覧", items_path, class:"btn btn-outline-dark" %>
           </li>
           <li class="nav-item ml-5">
-            <%= link_to "カート", "#", class:"btn btn-outline-dark" %>
+            <%= link_to "カート", cart_items_path, class:"btn btn-outline-dark" %>
           </li>
           <li class="nav-item ml-5">
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class:"btn btn-outline-dark" %>
