--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,9 +1,9 @@
 <h2>商品一覧</h2>
 
 <% @items.each do |item| %>
-  <% if item.item_image.attached? %>
+  <% if item.image.attached? %>
     <%= link_to item_path(item.id) do %>
-      <%= image_tag item.item_image, size: "80x80" %><br />
+      <%= image_tag item.image, size: "80x80" %><br />
     <% end %>
   <% else %>
     <%= link_to item_path(item.id) do %>
