--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -46,7 +46,7 @@
      <!--空リンク-->
       <div class="d-flex align-items-center my-4">
         <h3 class="mr-3"><b>配送先　</b></h3>
-        <%= link_to "一覧を見る", "#", class:"btn btn-primary px-4" %>
+        <%= link_to "一覧を見る", addresses_path, class:"btn btn-primary px-4" %>
       </div>
       <div class="d-flex align-items-center my-4">
         <h3 class="mr-3"><b>注文履歴</b></h3>
