--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,16 +1,40 @@
-<h1>配送先編集</h1>
-<%= form_with model: @address,url: address_path(@address), method: :patch do |f| %>
-<div>
-  <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
-  <%= f.text_field :post_code %>
-</div>
-<div>
-  <%= f.label :address, "住所" %>
-  <%= f.text_field :address %>
-</div>
-<div>
-  <%= f.label :name, "宛名" %>
-  <%= f.text_field :name %>
-  <%= f.submit '変更内容を保存' %>
-</div>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3 class="my-5">配送先編集</h3>
+      <div class="col-sm-12 col-md-10 col-lg-8">
+        <table class="table table-borderless">
+          <%= form_with model: @address,url: address_path(@address), method: :patch do |f| %>
+            <tr>
+              <td>
+                <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
+              </td>
+              <td>
+                <%= f.text_field :post_code %>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <%= f.label :address, "住所" %>
+              </td>
+              <td>
+                <%= f.text_field :address %>
+              </td>
+            </tr>
+                <tr>
+              <td>
+                <%= f.label :name, "宛名" %>
+              </td>
+              <td>
+                <%= f.text_field :name %>
+              </td>
+              <td>
+                <%= f.submit '変更内容を保存', class:"btn btn-sm btn-success" %>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+      </end>
+    </end>
+  </end>
+</end>
