--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,46 +1,67 @@
-<h2>配送先登録/一覧</h2>
-<div>
-  <div>
-  <%= form_with model: @address,url: addresses_path, method: :post do |f| %>
-    <div>
-      <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
-      <%= f.text_field :post_code, placeholder: '0000000' %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3 class="my-5">配送先登録/一覧</h3>
+      <div class="col-sm-12 col-md-10 col-lg-8">
+        <table class="table table-borderless">
+          <%= form_with model: @address,url: addresses_path, method: :post do |f| %>
+            <tr>
+              <td>
+                <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
+              </td>
+              <td>
+                <%= f.text_field :post_code, placeholder: '0000000' %>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <%= f.label :address, "住所" %>
+              </td>
+              <td>
+                <%= f.text_field :address, placeholder: '東京都渋谷区代々木神園町0-0' %>
+              </td>
+            </tr>
+                <tr>
+              <td>
+                <%= f.label :name, "宛名" %>
+              </td>
+              <td>
+                <%= f.text_field :name, placeholder: '令和道子' %>
+              </td>
+              <td>
+                <%= f.submit '新規登録', class:"btn btn-sm btn-success" %>
+              </td>
+            </tr>
+          <% end %>
+          </div>
+        </table>
+
+        <table>
+          <thead>
+            <tr>
+              <th>郵便番号</th>
+              <th>住所</th>
+              <th>宛名</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @addresses.each do |address| %>
+              <tr>
+                <td><%= address.post_code %></td>
+                <td><%= address.address %></td>
+                <td><%= address.name %></td>
+                <% if address.customer_id == current_customer.id %>
+                <td>
+                  <%= link_to '編集する', edit_address_path(address), class:"btn btn-sm btn-success" %>
+                  <%= link_to '削除する', address_path(address), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
+                </td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <div>
-      <%= f.label :address, "住所" %>
-      <%= f.text_field :address, placeholder: '東京都渋谷区代々木神園町0-0' %>
-    </div>
-    <div>
-      <%= f.label :name, "宛名" %>
-      <%= f.text_field :name, placeholder: '令和道子' %>
-      <%= f.submit '新規登録', class:"btn btn-success" %>
-    </div>
-  <% end %>
   </div>
 </div>
-
-<table>
-  <thead>
-    <tr>
-      <th>郵便番号</th>
-      <th>住所</th>
-      <th>宛名</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @addresses.each do |address| %>
-      <tr>
-        <td><%= address.post_code %></td>
-        <td><%= address.address %></td>
-        <td><%= address.name %></td>
-        <% if address.customer_id == current_customer.id %>
-        <td>
-          <%= link_to '編集する', edit_address_path(address), class:"btn btn-success" %>
-          <%= link_to '削除する', address_path(address), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
-        </td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
