--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,65 +1,81 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5"><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h3>
+      <h3 class="col-5 my-5 bg-light"><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h3>
 
       <div class="col-sm-12 col-md-10 col-lg-8">
 
         <%= form_with model: @customer, url: admin_customer_path, method: :patch do |f| %>
 
-        <table class="table table-borderless">
-          <tr>
-            <td>会員ID</td>
-            <td><%= @customer.id %></td>
-          </tr>
+          <table class="table table-borderless">
+            <tr>
+              <td>会員ID</td>
+              <td><%= @customer.id %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>氏名</td>
-            <td><%= f.text_field :last_name %></td>
-            <td><%= f.text_field :first_name %></td>
-          </tr>
+            <tr>
+              <td>氏名</td>
+              <td><%= f.text_field :last_name, class: "form-control" %></td>
+              <td><%= f.text_field :first_name, class: "form-control" %></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>フリガナ</td>
-            <td><%= f.text_field :last_name_kana %></td>
-            <td><%= f.text_field :first_name_kana %></td>
-          </tr>
+            <tr>
+              <td>フリガナ</td>
+              <td><%= f.text_field :last_name_kana, class: "form-control" %></td>
+              <td><%= f.text_field :first_name_kana, class: "form-control" %></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>郵便番号</td>
-            <td><%= f.text_field :post_code %></td>
-          </tr>
+            <tr>
+              <td>郵便番号</td>
+              <td><%= f.text_field :post_code, class: "form-control" %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>住所</td>
-            <td><%= f.text_field :address %></td>
-          </tr>
+            <tr>
+              <td>住所</td>
+              <td colspan="2"><%= f.text_field :address, class: "form-control" %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>電話番号</td>
-            <td><%= f.text_field :telephone_number %></td>
-          </tr>
+            <tr>
+              <td>電話番号</td>
+              <td><%= f.text_field :telephone_number, class: "form-control" %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>メールアドレス</td>
-            <td><%= f.text_field :email %></td>
-          </tr>
+            <tr>
+              <td>メールアドレス</td>
+              <td><%= f.text_field :email, class: "form-control" %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td>会員ステータス</td>
-            <td>
-              <%= f.radio_button :is_active, :true %>
-              <%= f.label :is_active, "有効" %>
+            <tr>
+              <td>会員ステータス</td>
+              <td>
+                <%= f.radio_button :is_active, :true %>
+                <%= f.label :is_active, "有効" %>
 
-              <%= f.radio_button :is_active, :false %>
-              <%= f.label :is_active, "退会" %>
-            </td>
-          </tr>
+                <%= f.radio_button :is_active, :false %>
+                <%= f.label :is_active, "退会" %>
+              </td>
+              <td></td>
+              <td></td>
+            </tr>
 
-          <tr>
-            <td></td>
-            <td><%= f.submit "変更を保存", class:"btn btn-success px-4" %></td>
-          </tr>
+            <tr>
+              <td></td>
+              <td><%= f.submit "変更を保存", class:"btn btn-success px-4" %></td>
+              <td></td>
+              <td></td>
+            </tr>
 
           <% end %>
         </table>
