--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
+      <h3 class="col-4 my-5 bg-light"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
 
       <div class="col-sm-12 col-md-10 col-lg-8">
 
