--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,37 +1,40 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5">会員一覧</h3>
+      <h3 class="col-2 my-5 bg-light">会員一覧</h3>
 
       <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
 
         <table class="table">
           <thead>
             <tr>
-              <th>会員ID</th>
-              <th>氏名</th>
-              <th>メールアドレス</th>
-              <th>ステータス</th>
+              <th class="bg-light">会員ID</th>
+              <th class="bg-light">氏名</th>
+              <th class="bg-light">メールアドレス</th>
+              <th class="bg-light">ステータス</th>
             </tr>
           </thead>
 
           <% @customers.each do |customer| %>
-          <tr>
-            <td><%= customer.id %></td>
-            <td><%= link_to "#{customer.last_name}#{customer.first_name}", admin_customer_path(customer) %></td>
-            <td><%= customer.email %></td>
-            <% if customer.is_active %>
-              <td class="text-success"><b>有効</b></td>
-            <% else %>
-              <td class="text-secondary"><b>退会</b></td>
-            <% end %>
-          </tr>
-          <% end %>
+          <tbody>
+            <tr>
+              <td><%= customer.id %></td>
+              <td><%= link_to "#{customer.last_name}#{customer.first_name}", admin_customer_path(customer) %></td>
+              <td><%= customer.email %></td>
+              <% if customer.is_active %>
+                <td class="text-success"><b>有効</b></td>
+              <% else %>
+                <td class="text-secondary"><b>退会</b></td>
+              <% end %>
+              </tr>
+              <% end %>
+          </tbody>
         </table>
+
+          <%= paginate @customers ,class: "mx-auto" %>
 
       </div>
 
     </div>
   </div>
 </div>
-<!--ページネーション実装予定-->
