--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5">マイページ<%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></h3>
+      <h3 class="col-2 my-5 bg-light">マイページ</h3>
 
       <div class="d-flex align-items-center my-4">
         <h3 class="mr-3"><b>登録情報</b></h3>
