--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,30 +1,40 @@
-<h2>商品一覧</h2>
-<%= link_to '+', new_admin_item_path %>
-
-<table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th>商品ID</th>
-      <th>商品名</th>
-      <th>税抜価格</th>
-      <th>ジャンル</th>
-      <th>ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @items.each do |item| %>
-    <tr>
-      <td><%= item.id %></td>
-      <td><%= link_to item.name, admin_item_path(item.id) %></td>
-      <td><%= number_with_delimiter(item.price) %></td>
-      <td><%= item.genre.name %></td>
-      <% if item.is_active? %>
-        <td>販売中</td>
-      <% else %>
-        <td>販売停止中</td>
-      <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<!-- 1ページ毎の表示数は10個のため、kaminariでページを分ける -->
+<div class="container">
+  <div class="row py-4">
+    <div class="col-2 bg-light text-center">
+      <h3>商品一覧</h3>
+    </div>
+    <div class="col-10 text-right">
+      <%= link_to '+', new_admin_item_path, class: 'btn btn-outline-dark shadow' %>
+    </div>
+  </div>
+        
+        <table class='table table-hover table-inverse'>
+          <thead>
+            <tr>
+              <th>商品ID</th>
+              <th>商品名</th>
+              <th>税抜価格</th>
+              <th>ジャンル</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @items.each do |item| %>
+            <tr>
+              <td><%= item.id %></td>
+              <td><%= link_to item.name, admin_item_path(item.id) %></td>
+              <td><%= number_with_delimiter(item.price) %></td>
+              <td><%= item.genre.name %></td>
+              <% if item.is_active? %>
+                <td>販売中</td>
+              <% else %>
+                <td>販売停止中</td>
+              <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      
+    
+  <!-- 1ページ毎の表示数は10個のため、kaminariでページを分ける -->
+</div>
