--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,40 +1,48 @@
-<h2>商品編集</h2>
-
-<%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
-  <div class="form-group">
-    <%= f.label :商品画像 %>
-    <%= f.file_field :image, accept: "image/*" %>
+<div class="container">
+  <div class="row m-2">
+    <div class="col">
+      <h3 class="my-3">商品編集</h3>
+    </div>
   </div>
+  <div class="row">
+    <div class="col">
+    <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
+      <div class="form-group">
+        <%= f.label :商品画像 %>
+        <%= f.file_field :image, accept: "image/*" %>
+      </div>
 
-  <div class="form-group">
-  <%= f.label :商品名 %>
-  <%= f.text_field :name, placeholder: '商品名', class: "form-control" %>
-  </div>
+      <div class="form-group">
+      <%= f.label :商品名 %>
+      <%= f.text_field :name, placeholder: '商品名', class: "form-control" %>
+      </div>
 
-  <div class="form-group">
-    <%= f.label :商品説明 %>
-    <%= f.text_area :introduction, placeholder: 'ここに説明文を記述します', class: "form-control" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :商品説明 %>
+        <%= f.text_area :introduction, placeholder: 'ここに説明文を記述します', class: "form-control" %>
+      </div>
 
-  <div class="form-group">
-    <%= f.label :ジャンル %>
-    <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, class: "form-control" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :ジャンル %>
+        <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, class: "form-control" %>
+      </div>
 
-  <div class="form-group">
-    <%= f.label :税抜価格 %>
-    <%= f.text_field :price, class: "form-control" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :税抜価格 %>
+        <%= f.text_field :price, class: "form-control" %>
+      </div>
 
-  <div class="form-group">
-    <%= f.label :販売ステータス %>
-    <%= f.radio_button :is_active, :true %>
-    <%= f.label :販売中 %>
-    <%= f.radio_button :is_active, :false %>
-    <%= f.label :販売停止中, class: "form-control" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :販売ステータス %>
+        <%= f.radio_button :is_active, :true %>
+        <%= f.label :販売中 %>
+        <%= f.radio_button :is_active, :false %>
+        <%= f.label :販売停止中 %>
+      </div>
 
-  <div class="form-group">
-    <%= f.submit '変更を保存', class: 'btn btn-success' %>
+      <div class="form-group">
+        <%= f.submit '変更を保存', class: 'btn btn-success' %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
