fixed admin item and cart-item

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <h3>ショッピングカート</h3>
 
-<%= link_to 'カートを空にする', url: delete_all_path, method: :delete, data: { confirm: "カート内にある全ての商品が削除されてしまいます。\n本当に削除してもよろしいでしょうか？" }, class: "btn btn-sm btn-danger" %>
+<%= link_to 'カートを空にする', "#", data: { confirm: "カート内にある全ての商品が削除されてしまいます。\n本当に削除してもよろしいでしょうか？" }, class: "btn btn-sm btn-danger" %>
 
 <table>
   <thead>
