--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -7,33 +7,34 @@
       <%= link_to '+', new_admin_item_path, class: 'btn btn-outline-dark shadow' %>
     </div>
   </div>
-        
-        <table class='table table-hover table-inverse'>
-          <thead>
-            <tr>
-              <th>商品ID</th>
-              <th>商品名</th>
-              <th>税抜価格</th>
-              <th>ジャンル</th>
-              <th>ステータス</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @items.each do |item| %>
-            <tr>
-              <td><%= item.id %></td>
-              <td><%= link_to item.name, admin_item_path(item.id) %></td>
-              <td><%= number_with_delimiter(item.price) %></td>
-              <td><%= item.genre.name %></td>
-              <% if item.is_active? %>
-                <td>販売中</td>
-              <% else %>
-                <td>販売停止中</td>
-              <% end %>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+  <div class="row">
+    <table class='table table-hover table-inverse'>
+      <thead class="bg-light">
+        <tr>
+          <th>商品ID</th>
+          <th>商品名</th>
+          <th>税抜価格</th>
+          <th>ジャンル</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @items.each do |item| %>
+        <tr>
+          <td><%= item.id %></td>
+          <td><%= link_to item.name, admin_item_path(item.id),style: "color: black;" %></td>
+          <td><%= number_with_delimiter(item.price) %></td>
+          <td><%= item.genre.name %></td>
+          <% if item.is_active? %>
+            <td class="text-success font-weight-bold">販売中</td>
+          <% else %>
+            <td class="text-danger font-weight-bold">販売停止中</td>
+          <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
       
     
   <!-- 1ページ毎の表示数は10個のため、kaminariでページを分ける -->
