--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,40 +1,42 @@
-<h2>商品新規登録</h2>
-
-<%= form_with model: @item, url: admin_items_path(@item.id), method: :post do |f| %>
-  <div class="form-group">
-    <%= f.label :商品画像 %>
-    <%= f.file_field :image, accept: "image/*" %>
-  </div>
-
-  <div class="form-group">
-  <%= f.label :商品名 %>
-  <%= f.text_field :name, placeholder: '商品名', class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :商品説明 %>
-    <%= f.text_area :introduction, placeholder: 'ここに説明文を記述します', class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :ジャンル %>
-    <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, include_blank: '-- 選択してください --', class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :税抜価格 %>
-    <%= f.text_field :price, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :販売ステータス %>
-    <%= f.radio_button :is_active, :true %>
-    <%= f.label :販売中 %>
-    <%= f.radio_button :is_active, :false %>
-    <%= f.label :販売停止中, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit '新規登録', class: 'btn btn-success' %>
-  </div>
-<% end %>
+<div class="container">
+  <h2>商品新規登録</h2>
+  
+  <%= form_with model: @item, url: admin_items_path(@item.id), method: :post do |f| %>
+    <div class="form-group"><br/>
+      <%= f.label :商品画像 %>
+      <%= f.file_field :image, accept: "image/*" %>
+    </div>
+  
+    <div class="form-group">
+    <%= f.label :商品名 %>
+    <%= f.text_field :name, placeholder: '商品名', class: "form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :商品説明 %>
+      <%= f.text_area :introduction, placeholder: 'ここに説明文を記述します', class: "form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :ジャンル %>
+      <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, include_blank: '-- 選択してください --', class: "form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :税抜価格 %>
+      <%= f.text_field :price, class: "form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :販売ステータス %>
+      <%= f.radio_button :is_active, :true %>
+      <%= f.label :販売中 %>
+      <%= f.radio_button :is_active, :false %>
+      <%= f.label :販売停止中, class: "form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.submit '新規登録', class: 'btn btn-success' %>
+    </div>
+  <% end %>
+</div>
