--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,7 +4,7 @@
       <h3>商品一覧</h3>
     </div>
     <div class="col-10 text-right">
-      <%= link_to '+', new_admin_item_path, class: 'btn btn-outline-dark shadow' %>
+      <%= link_to '+', new_admin_item_path, class: 'btn btn-outline-dark rounded-circle ml-auto shadow' %>
     </div>
   </div>
   <div class="row">
