fixed item and image size

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -28,7 +28,7 @@
         </tr>
         <tr>
           <td>税込価格<br />(税抜価格)</td>
-          <td><%= number_with_delimiter((@item.price * 1.1).floor) %>（<%= number_with_delimiter(@item.price) %>）円</td>
+          <td><%= number_with_delimiter(@item.with_tax_price) %>（<%= number_with_delimiter(@item.price) %>）円</td>
         </tr>
         <tr>
           <td>販売ステータス</td>
