--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <h3>ショッピングカート</h3>
 
-<%= link_to 'カートを空にする', destroy_all_cart_items_path , method: :delete , "data-confirm" => "カート内にある全ての商品が削除されてしまいます。\n本当に削除してもよろしいでしょうか？" , class: "btn btn-sm btn-danger" %>
+<%= link_to 'カートを空にする', destroy_all_cart_items_path , method: :delete , "data-confirm" => "カート内にある全ての商品が削除されます。\n本当に削除しますか？" , class: "btn btn-sm btn-danger" %>
 
 <table>
   <thead>
@@ -15,7 +15,7 @@
   <tbody>
       <% @cart_items.each do |cart_item| %>
         <tr>
-          <td>画像だよ　<%= cart_item.item.name %></td>
+          <td><%= image_tag cart_item.item.image, size: "90x60" %>　<%= cart_item.item.name %></td>
           <td><%= number_with_delimiter(cart_item.item.with_tax_price) %></td>
            <td>
               <%= form_with model:cart_item, url:cart_item_path(cart_item), method: :patch do |f| %>
