--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <%= image_tag "img1.jpg", size: "100x100" %>
     <h1>テキスト</h1>
   </div>
     <div class-"row">
