--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -7,7 +7,7 @@
         <%= form_with model: @item, url: admin_items_path(@item.id), method: :post do |f| %>
           <div class="form-group">
             <%= f.label :商品画像 %>
-            <%= f.file_field :image, accept: "image/*" %>
+            <%= f.file_field :item_image, accept: "image/*" %>
           </div>
 
           <div class="form-group">
