--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
       <% @cart_items.each do |cart_item| %>
         <tr>
-          <td><%= image_tag cart_item.item.image, size: "90x60" %>　<%= cart_item.item.name %></td>
+          <td><%= image_tag cart_item.item.get_item_image(90, 60) %>　<%= cart_item.item.name %></td>
           <td><%= number_with_delimiter(cart_item.item.with_tax_price) %></td>
            <td>
               <%= form_with model:cart_item, url:cart_item_path(cart_item), method: :patch do |f| %>
