--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
           </div>
         <ul class="nav justify-content-end ">
           <li class="nav-item ml-5">
-            <%= link_to "マイページ", my_page_path(current_customer), class:"btn btn-outline-dark" %>
+            <%= link_to "マイページ", my_page_path, class:"btn btn-outline-dark" %>
           </li>
           <li class="nav-item ml-5">
             <%= link_to "商品一覧", items_path, class:"btn btn-outline-dark" %>
