--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
               <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-dark" %>
             </li>
             <li class="nav-item ml-5">
-              <%= link_to "注文履歴", "#", class:"btn btn-outline-dark" %>
+              <%= link_to "注文履歴", admin_root_path, class:"btn btn-outline-dark" %>
             </li>
             <li class="nav-item ml-5">
               <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-dark" %>
