--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
     <div class="card text-center">
       <%= image_tag "img1.jpg", size: "800x400",style: "opacity: 0.5", class: "mx-auto" %>
       <div class="card-img-overlay d-flex align-items-center justify-content-center">
-        <h3 class="text-white text-center" style="background-color: rgba(0, 0, 0, 0.75);">
+        <h3 class="text-white" style="background-color: rgba(0, 0, 0, 0.75);">
           ようこそ、ながのCAKEへ！<br/>
           このサイトは、ケーキ販売のECサイトになります。<br/>
           会員でない方も商品の閲覧はできますが、<br/>
