--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,7 +4,8 @@
       <h2 class="my-5">商品新規登録</h2>
 
       <div class="col-sm-12 col-md-10 col-lg-8 px-sm-0 mx-auto">
-        <%= form_with model: @item, url: admin_items_path(@item.id), method: :post do |f| %>
+        <%= render 'layouts/error', object: @item %>
+        <%= form_with model: @item, url: admin_items_path(@item), method: :post do |f| %>
           <div class="form-group">
             <%= f.label :商品画像 %>
             <%= f.file_field :item_image, accept: "image/*" %>
@@ -22,7 +23,7 @@
 
           <div class="form-group">
             <%= f.label :ジャンル %>
-            <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, include_blank: '-- 選択してください --', class: "form-control" %>
+            <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: '-- 選択してください --', class: "form-control" %>
           </div>
 
           <div class="form-group">
