--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row m-2">
     <div class="col">
       <h3 class="my-3">商品編集</h3>
+      <%= render 'layouts/error', object: @item %>
     </div>
   </div>
   <div class="row">
@@ -24,7 +25,7 @@
 
       <div class="form-group">
         <%= f.label :ジャンル %>
-        <%= f.select :genre, @genres.map { |genre| [genre.name, genre.id] }, class: "form-control" %>
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), class: "form-control" %>
       </div>
 
       <div class="form-group">
