--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -56,7 +56,7 @@
               <%= link_to "編集する", edit_admin_customer_path, class:"btn btn-success px-3" %>
             </td>
             <!--空リンク-->
-            <td><%= link_to "注文履歴一覧を見る", "#", class:"btn btn-primary px-3" %></td>
+            <td><%= link_to "注文履歴一覧を見る", orders_path, class:"btn btn-primary px-3" %></td>
           </tr>
 
         </table>
