--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -17,7 +17,7 @@
               <tr>
                 <td>フリガナ</td>
                 <td><%= f.text_field :last_name_kana, class:"form-control", placeholder: "レイワ" %></td>
-                <td><%= f.text_field :first_name_kana, class:"form-control", placeholder: "ハナコ" %></td>
+                <td><%= f.text_field :first_name_kana, class:"form-control", placeholder: "ミチコ" %></td>
               </tr>
 
               <tr>
